fix: 修复collapse calc的问题

--- a/packages/ui/collapse/src/index.less
+++ b/packages/ui/collapse/src/index.less
@@ -61,7 +61,7 @@
 
 @arrow-gap: 28px;
 
-.content-padding(@content-padding-left, @gap:0) {
+.content-padding(@content-padding-left, @gap:0px) {
     padding-top: var(--collapse-content-box-padding-top);
     padding-bottom: var(--collapse-content-box-padding-bottom);
     padding-left: calc(~'@{content-padding-left} + @{gap}');
